// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`applyTheme renders correctly 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(33, 33, 33); font-size: 24px; font-weight: 700; padding: 16px 16px 16px 16px;"
/>
`;

exports[`applyTheme renders correctly for H1 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(33, 33, 33); font-size: 48px; font-weight: 700; padding: 16px 16px 16px 16px;"
/>
`;

exports[`composition hook should return with Heading props 1`] = `
Object {
  "active": false,
  "colorMode": "default",
  "elementRef": [Function],
  "focus": false,
  "hover": false,
  "hoveractive": false,
  "ref": [Function],
  "style": Array [
    Object {},
  ],
}
`;

exports[`composition render props should render correctly 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(33, 33, 33); font-size: 24px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for color 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(87, 79, 235); font-size: 24px; font-weight: 700;"
>
  hello world
</div>
`;

exports[`defaultProps should render correctly for color for H1 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(33, 33, 33); font-size: 24px; font-weight: 700;"
>
  hello world
</div>
`;

exports[`modes renders correctly for applyTheme 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(238, 237, 253); font-size: 24px; font-weight: 700; padding: 16px 16px 16px 16px;"
/>
`;

exports[`modes renders correctly for applyTheme for H1 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(238, 237, 253); font-size: 48px; font-weight: 700; padding: 16px 16px 16px 16px;"
/>
`;

exports[`modes renders correctly for overrides 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(33, 33, 33); font-size: 24px; font-weight: 700; padding: 16px 16px 16px 16px;"
>
  Hello world
</div>
`;

exports[`modes renders correctly for overrides for H1 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(33, 33, 33); font-size: 48px; font-weight: 700; padding: 16px 16px 16px 16px;"
>
  Hello world
</div>
`;

exports[`modes should render correctly when colorMode is set globally 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); color: rgb(238, 237, 253); font-size: 24px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`modes should render correctly when colorMode is set globally for H1 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); color: rgb(238, 237, 253); font-size: 48px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`modes should render correctly when colorMode set as prop 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); color: rgb(238, 237, 253); font-size: 24px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`modes should render correctly when colorMode set as prop for H1 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); color: rgb(238, 237, 253); font-size: 48px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`overrides should render correctly 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(33, 33, 33); font-size: 24px; font-weight: 700; padding: 16px 16px 16px 16px;"
>
  Hello world
</div>
`;

exports[`overrides should render correctly for H1 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(33, 33, 33); font-size: 48px; font-weight: 700; padding: 16px 16px 16px 16px;"
>
  Hello world
</div>
`;

exports[`props should render correctly 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(33, 33, 33); font-size: 24px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`props should render correctly for H1 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(33, 33, 33); font-size: 48px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`props should render correctly for H2 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(33, 33, 33); font-size: 40px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`props should render correctly for H3 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(33, 33, 33); font-size: 32px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`props should render correctly for H4 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(33, 33, 33); font-size: 24px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`props should render correctly for H5 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(33, 33, 33); font-size: 20px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`props should render correctly for H6 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(33, 33, 33); font-size: 16px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(87, 79, 235); font-size: 24px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`theming Heading.H1.styles.base should render correctly for H1 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); color: rgb(33, 33, 33); font-size: 48px; font-weight: 700;"
>
  hello world
</div>
`;

exports[`theming Heading.H1.styles.base should render correctly for H1 2`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(33, 33, 33); font-size: 48px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`theming Heading.styles.base should render correctly 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); color: rgb(33, 33, 33); font-size: 24px; font-weight: 700;"
>
  hello world
</div>
`;

exports[`theming Heading.styles.base should render correctly 2`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="color: rgb(33, 33, 33); font-size: 24px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`theming Heading.styles.base should render correctly for default font 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); color: rgb(33, 33, 33); font-family: default; font-size: 24px; font-weight: 700;"
>
  hello world
</div>
`;

exports[`theming Heading.styles.base should render correctly for heading font 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); color: rgb(33, 33, 33); font-family: heading; font-size: 24px; font-weight: 700;"
>
  hello world
</div>
`;

exports[`variants renders correctly for applyTheme 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(255, 0, 0); font-size: 24px; font-weight: 700; padding: 16px 16px 16px 16px;"
/>
`;

exports[`variants renders correctly for applyTheme for H1 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(255, 0, 0); font-size: 48px; font-weight: 700; padding: 16px 16px 16px 16px;"
/>
`;

exports[`variants renders correctly for overrides 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(33, 33, 33); font-size: 24px; font-weight: 700; padding: 16px 16px 16px 16px;"
>
  Hello world
</div>
`;

exports[`variants renders correctly for overrides for H1 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); box-shadow: 0px 1px 4px rgba(0,0,0,0.15); color: rgb(33, 33, 33); font-size: 48px; font-weight: 700; padding: 16px 16px 16px 16px;"
>
  Hello world
</div>
`;

exports[`variants styles.base should render correctly 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); color: rgb(33, 33, 33); font-size: 24px; font-weight: 700;"
>
  Hello world
</div>
`;

exports[`variants styles.base should render correctly for H1 1`] = `
<div
  class="css-text-901oao"
  dir="auto"
  style="background-color: rgb(255, 0, 0); color: rgb(33, 33, 33); font-size: 48px; font-weight: 700;"
>
  Hello world
</div>
`;
